# lion-Calculater

./: Cargo.toml  README.md  build.rs
src/: app.rs  calculator.rs  history.rs  main.rs  memory.rs  parser.rs
src/modes/: financial.rs  mod.rs  programmer.rs
ui/: app_window.slint  base_button.slint  basic_pad.slint  calc_button.slint  financial_pad.slint  history_panel.slint  mode_tab.slint  programmer_pad.slint  scientific_pad.slint  tokens.slint  tvm_button.slint
